--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Hello world</title>
+        <title><%= title %></title>
     </head>
     <body>
         <%- body %>
