modify top page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,12 @@
-<h1>TEST</h1>
+<h1>Almond Choco</h1>
+<% var data = ["001", "002", "003"]; %>
+<ul>
+  <% for(var i = 0; i < data.length; i++) { %>
+    <li>
+      <a href='xxx/<%= data[i] %>' ><%= data[i] %></a>
+    </li>
+  <% } %>
+</ul>
 <%- mes %><!-- 普通に出力 -->
 <%= mes %><!-- エスケープして出力 -->
+
