--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -1,6 +1,7 @@
 <% title = 'Problem' %>
 <% description_text = "explain the problem" %>
 <% first_message = "write your code" %>
+<% copyright = "Copyright(C) 2012. Almond Choco Project(仮)" %>
 <h1>Problem Sample</h1>
 
 <h2>Description</h2>
@@ -22,3 +23,4 @@
 
 <br>
 
+<%= copyright %>
