add form to problem

--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -13,6 +13,7 @@
 
 <br><br>
 
+<form action="problems/id/run" method="post">
 Input:
 <br>
 <TEXTAREA cols="40" rows="2" wrap="off">
@@ -40,4 +41,5 @@ Code:
 
 <br>
 
+</form>
 <%= copyright %>
