mv some variables from view to conroller

--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -1,31 +1,26 @@
 <% title = 'Problem' %>
-<% description_text = "explain the problem" %>
-<% first_message = "write your code" %>
-<% input_text = "1 2" %>
-<% output_text = "3" %>
 <% copyright = "Copyright(C) 2012. Almond Choco Project(仮)" %>
-<h1>Problem Sample</h1>
+<h1><%= problem.id %> - <%= problem.title %></h1>
 
-<h2><%= mes %></h2>
 <h2>Description</h2>
 <TEXTAREA cols="40" rows="6" wrap="off">
-  <%= description_text %>
+  <%= problem.description_text %>
 </TEXTAREA>
 
 <br><br>
 
-<form action="problems/id/run" method="post">
+<form action="problems/<%= problem.id %>/run" method="post">
 Input:
 <br>
 <TEXTAREA cols="40" rows="2" wrap="off">
-  <%= input_text %>
+  <%= problem.input %>
 </TEXTAREA>
 <br><br>
 
 Output:
 <br>
 <TEXTAREA cols="40" rows="2" wrap="off">
-  <%= output_text %>
+  <%= problem.output %>
 </TEXTAREA>
 
 <br><br>
@@ -33,7 +28,7 @@ Output:
 Code:
 <br>
 <TEXTAREA cols="40" rows="6" wrap="off">
-  <%= first_message %>
+  <%= problem.first_message %>
 </TEXTAREA>
 
 <br>
