add result pages

--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -9,7 +9,7 @@
 
 <br><br>
 
-<form action="problems/<%= problem.id %>/run" method="post">
+<form action="/problems/<%= problem.id %>/run" method="post">
 Input:
 <br>
 <TEXTAREA cols="40" rows="2" wrap="off">
