add name to textarea

--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -12,7 +12,7 @@
 <form action="/problems/<%= problem.id %>/run" method="post">
 Input:
 <br>
-<TEXTAREA cols="40" rows="2" wrap="off">
+<TEXTAREA cols="40" rows="2" wrap="off" name="input">
   <%= problem.input %>
 </TEXTAREA>
 <br><br>
