--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -19,7 +19,7 @@ Input:
 
 Output:
 <br>
-<TEXTAREA cols="40" rows="2" wrap="off">
+<TEXTAREA cols="40" rows="2" wrap="off" name="output">
   <%= problem.output %>
 </TEXTAREA>
 
@@ -27,7 +27,7 @@ Output:
 
 Code:
 <br>
-<TEXTAREA cols="40" rows="6" wrap="off">
+<TEXTAREA cols="40" rows="6" wrap="off" name="code">
   <%= problem.first_message %>
 </TEXTAREA>
 
