--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -28,7 +28,7 @@ Output:
 Code:
 <br>
 <TEXTAREA cols="40" rows="6" wrap="off" name="code">
-  <%= problem.first_message %>
+  <%= "print 3" %>
 </TEXTAREA>
 
 <br>
