modify top page

--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -4,7 +4,7 @@
 
 <h2>Description</h2>
 <TEXTAREA cols="40" rows="6" wrap="off">
-  <%= problem.description_text %>
+  <%= problem.description %>
 </TEXTAREA>
 
 <br><br>
