--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <ul>
   <% for(var i = 0; i < problems.length; i++) { %>
     <li>
-      <a href='/problem/<%= problems[i] %>' ><%= problems[i] %></a>
+      <a href='/problem/<%= problems[i].id %>' ><%= problems[i].title %></a>
   <% } %>
 </ul>
 
