--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -12,23 +12,20 @@
 <form action="/problems/<%= problem.id %>/run" method="post">
 Input:
 <br>
-<TEXTAREA cols="40" rows="2" wrap="off" name="input">
-  <%= problem.input %>
+<TEXTAREA cols="40" rows="2" wrap="off" name="input"><%= problem.input %>
 </TEXTAREA>
 <br><br>
 
 Output:
 <br>
-<TEXTAREA cols="40" rows="2" wrap="off" name="output">
-  <%= problem.output %>
+<TEXTAREA cols="40" rows="2" wrap="off" name="output"><%= problem.output %>
 </TEXTAREA>
 
 <br><br>
 
 Code:
 <br>
-<TEXTAREA cols="40" rows="6" wrap="off" name="code">
-  <%= "print 3" %>
+<TEXTAREA cols="40" rows="6" wrap="off" name="code"><%= "print 3" %>
 </TEXTAREA>
 
 <br>
