--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,8 +1,9 @@
 <html>
-    <head>
-        <title><%= title %></title>
-    </head>
-    <body>
-        <%- body %>
-    </body>
+  <head>
+    <title><%= title %></title>
+  </head>
+  <body>
+    <h1><a href="/">Almond Choco</a></h1>
+    <%- body %>
+  </body>
 </html>
