--- a/views/solve.ejs
+++ b/views/solve.ejs
@@ -80,11 +80,7 @@
     <option value="115" label="Unlambda"  title="Unlambda (unlambda-2.0.0)" >Unlambda</option>
     <option value="101" label="VB.NET"  title="VB.NET (mono-2.4.2.3)" >VB.NET</option>
     <option value="6" label="Whitespace"  title="Whitespace (wspace 0.3)" >Whitespace</option>
-  </select>
-
-
-
-
+  </select><br>
 
   <textarea cols="40" rows="6" wrap="off" name="code"></textarea>
 
