--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
       <%= problems[i].title %>
       <a href='/problems/<%= problems[i].id %>/solve'>solve</a>
       <a href='/problems/<%= problems[i].id %>/edit'>edit</a>
+      <a href='/problems/<%= problems[i].id %>/delete'>delete</a>
   <% } %>
 </ul>
 
