--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,5 +5,6 @@
   <body>
     <h1><a href="/">Almond Choco</a></h1>
     <%- body %>
+    Copyright(C) 2012. Almond Choco Project
   </body>
 </html>
