--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title><%= title %></title>
+    <!--POGEN,__pogen_11,title_,<%= title %>--><title lang="__pogen_11"><%= title %></title>
   </head>
   <body>
-    <h1><a href="/">Almond Choco</a></h1>
+    <h1><a href="/" lang="__pogen_12">Almond Choco</a></h1>
     <%- body %>
     Copyright(C) 2012. Almond Choco Project
   </body>
