--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,9 +2,9 @@
 
 <h1>login</h>
 <form action='/register' method=post>
-<input type="text" name="userid">
+<input type="text" name="userid" lang="__pogen_13">
 <br>
-<input type="password" name="password">
+<input type="password" name="password" lang="__pogen_14">
 <br>
-<button type=submit>Register</button>
+<button type=submit lang="__pogen_15">Register</button>
 </form>
