--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,9 +2,9 @@
 
 <h1>Issue New Problem</h1>
 <form action="/problems/new" method="post">
-  title:<br><input name=title><br>
-  description:<br><textarea name=description></textarea><br>
-  input:<br><textarea name=input></textarea><br>
-  output:<br><textarea name=output></textarea><br>
-  <button type="submit">submit</button>
+  title:<br><input name=title lang="__pogen_16"><br>
+  description:<br><textarea name=description lang="__pogen_17"></textarea><br>
+  input:<br><textarea name=input lang="__pogen_18"></textarea><br>
+  output:<br><textarea name=output lang="__pogen_19"></textarea><br>
+  <button type="submit" lang="__pogen_20">submit</button>
 </form>
