--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,4 +1,4 @@
-<p>
+<!--POGEN,__pogen_21,result_,<%= result %>--><!--POGEN,__pogen_21,ex_,<%= ex %>--><!--POGEN,__pogen_21,out_,<%= out %>--><p lang="__pogen_21">
 <% title = 'result' %>
 <%= result %>
 <br>
