--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,7 @@
 <% title = 'login' %>
 
-<h1>login</h>
-<form action='/register' method=post>
-<input type="text" name="userid">
-<br>
-<input type="password" name="password">
-<br>
-<button type=submit>Register</button>
+<h1>login</h1>
+<form action='login' method=post>
+  <input type="text" name="user_id"><br>
+  <button type=submit>Register</button>
 </form>
